--- a/multi-user-chat/site/index.html
+++ b/multi-user-chat/site/index.html
@@ -35,7 +35,7 @@
     </header>
     <section id='videos'>
     <section id='largeScreenVideo'>
-      <video id="you" autoplay style="position: absolute; left: 0.3em; top: 0.3em ;z-index:1000" controls></video>
+      <video id="you" autoplay controls></video>
       <!-- <video id='remote-large' autoplay controls style='display:none;'></video> -->
     </section>
     <aside id='smallScreenVideos'>
